@@ -1,0 +1,20 @@
+require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
+
+describe "/comments/new.html.erb" do
+  include CommentsHelper
+  
+  before(:each) do
+    assigns[:comment] = stub_model(Comment,
+      :new_record? => true
+    )
+  end
+
+  it "should render new form" do
+    render "/comments/new.html.erb"
+    
+    response.should have_tag("form[action=?][method=post]", comments_path) do
+    end
+  end
+end
+
+
