@@ -3,6 +3,8 @@ It does not matter how slowly you go as long as you do not stop. -- Confucius
 Fri, Feb 13, 2008
 ---------------------------------------------------------------------
 - Implemented Campaign Summary sidebar for the campaign landing page.
+- Generated [Comment] scaffold and created database migration.
+- Added [acts_as_commentable] to core models.
 
 Thu, Feb 12, 2008
 ---------------------------------------------------------------------
